trunk/Archive2/1f/0fb5b3d4aaeb76/output
main.cpp: In function 'int main()':
main.cpp:22:20: error: 'add' was not declared in this scope
     cout << add(p,x) << endl;
                    ^
main.cpp: At global scope:
main.cpp:27:1: error: expected unqualified-id before 'public'
 public add(int *x, int y){
 ^
